cmake_minimum_required(VERSION 2.8)

project(poco-lib C CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include(ExternalProject)

ExternalProject_Add(Poco
  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/poco-develop/"
  PREFIX Poco
  CMAKE_ARGS     -DPOCO_STATIC:BOOL=ON
    -DENABLE_XML:BOOL=ON
    -DENABLE_JSON:BOOL=ON
    -DENABLE_MONGODB:BOOL=OFF
    -DENABLE_PDF:BOOL=OFF
    -DENABLE_UTIL:BOOL=ON
    -DENABLE_NET:BOOL=ON
    -DENABLE_NETSSL:BOOL=OFF
    -DENABLE_NETSSL_WIN:BOOL=OFF
    -DENABLE_CRYPTO:BOOL=OFF
    -DENABLE_DATA:BOOL=OFF
    -DENABLE_DATA_SQLITE:BOOL=OFF
    -DENABLE_DATA_MYSQL:BOOL=OFF
    -DENABLE_DATA_ODBC:BOOL=OFF
    -DENABLE_SEVENZIP:BOOL=OFF
    -DENABLE_ZIP:BOOL=OFF
    -DENABLE_APACHECONNECTOR:BOOL=OFF
    -DENABLE_CPPPARSER:BOOL=OFF
    -DENABLE_POCODOC:BOOL=OFF
    -DENABLE_PAGECOMPILER:BOOL=OFF
    -DENABLE_PAGECOMPILER_FILE2PAGE:BOOL=OFF
    -DENABLE_REDIS:BOOL=OFF
    -DCMAKE_BUILD_TYPE=Release 
  DEPENDS ${proj_DEPENDENCIES}
  UPDATE_COMMAND ""
  INSTALL_COMMAND ""
)

add_executable(${CMAKE_PROJECT_NAME}
  src/main.cc
)

add_dependencies(${CMAKE_PROJECT_NAME} Poco)

